Fixing issue on iphone header view

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ body, html {
     }
 	
 	#header img {
-        margin:0 auto;
+        margin:20% auto 0;
     }
 
     #social {   /* align  icones to centre of bounding box */
